--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/ana-ac/scheduled-messages-bot/issues"
   },
-  "homepage": "https://github.com/ana-ac/scheduled-messages-bot#readme"
+  "homepage": "https://github.com/ana-ac/scheduled-messages-bot#readme",
+  "dependencies": {
+    "node-telegram-bot-api": "^0.30.0"
+  }
 }
