Scheduled Messages Bot - add new dependencies and create structure of  app and Bot Class
 Changes to be committed:
	new file:   .env.example
	new file:   config.json
	new file:   index.js
	modified:   package-lock.json
	modified:   package.json
	new file:   src/bot.js
	new file:   src/config/config.js

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "keywords": [
     "nodejs",
     "telegram",
-    "telebot"
+    "bot",
+    "node-telegram-bot-api"
   ],
   "author": "Ana Arriaga Coll",
   "license": "MIT",
@@ -22,6 +23,10 @@
   },
   "homepage": "https://github.com/ana-ac/scheduled-messages-bot#readme",
   "dependencies": {
+    "dotenv-safe": "^8.1.0",
     "node-telegram-bot-api": "^0.30.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
