Scheduled Messages Bot - change a command to be more clear
 Changes to be committed:
	modified:   config.json
	modified:   src/bot.js

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "commands" : [
-        "schedule_message",
+        "add_schedule_message",
         "get_scheduled_messages",
         "get_history"
     ]
