Scehduled Messages Bot - create a system to load parameter config with  and without keys to be replaced by another variables
 Changes to be committed:
	modified:   config.json
	modified:   package-lock.json
	modified:   package.json
	modified:   src/bot.js
	modified:   src/config/config.js

--- a/config.json
+++ b/config.json
@@ -1,7 +1,23 @@
 {
+    "botname" : "schedulito",
     "commands" : [
         "add_schedule_message",
         "get_scheduled_messages",
         "get_history"
+    ],
+    "reply_messages" : [
+        {
+            "id" : "start",
+            "message" : "Welcome! :)"
+        },
+        {
+            "id" : "help",
+            "message" : "Hi! I'm BOT_NAME, what can I do for you?",
+            "replacers" : ["BOT_NAME"]
+        },
+        {
+            "id" : "mention",
+            "message" : "TELL ME"
+        }
     ]
 }
