Scheduled Messages Bot - reornanize project and structure to handle api  calls
 Changes to be committed:
	renamed:    src/helpers/utils.js -> bin/utils.js
	new file:   etc
	modified:   index.js
	new file:   lib/bot.js
	renamed:    src/config/config.js -> lib/config/config.js
	renamed:    config.json -> lib/config/config.json
	new file:   lib/controllers/scheduled_messages.js
	new file:   lib/index.js
	new file:   lib/telegram_bot.js
	modified:   package-lock.json
	modified:   package.json
	renamed:    src/assets/phone-messages.png -> public/assets/images/phone-messages.png
	deleted:    src/bot.js

--- a/lib/config/config.json
+++ b/lib/config/config.json
@@ -1,13 +1,12 @@
 {
     "botname" : "schedulito",
     "commands" : [
-        "add_schedule_message",
-        "get_scheduled_messages",
-        "get_history"
+        "add_scheduled_message",
+        "get_scheduled_messages"
     ],
     "buttons" : {
         "add_schedule_message" :
-            [ "Edit message", "Edit date", "Edit means", "save"]
+            [ "Edit message", "Edit date", "Edit means", "Save"]
     },
     "reply_messages" : [
         {
