--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/ana-ac/scheduled-messages-bot#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv-safe": "^8.1.0",
+    "express": "^4.17.1",
     "telegraf": "^3.32.0",
     "telegraf-keyboard": "^1.1.2"
   },
