Scheduled Messages Bot - refactor and adding eslint and fixes

--- a/lib/config/config.json
+++ b/lib/config/config.json
@@ -6,7 +6,12 @@
     ],
     "buttons" : {
         "add_schedule_message" :
-            [ "Edit message", "Edit date", "Edit means", "Save"]
+            [
+                "Edit message",
+                "Edit date",
+                "Edit means",
+                "Save"
+            ]
     },
     "reply_messages" : [
         {
