--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon index.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "generate-docs": "node_modules/.bin/jsdoc -c jsdoc.json"
   },
   "engines": {
     "node": ">=8.10.0"
@@ -28,9 +29,8 @@
   },
   "homepage": "https://github.com/ana-ac/scheduled-messages-bot#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "docdash": "^1.1.1",
     "dotenv-safe": "^8.1.0",
-    "express": "^4.17.1",
     "telegraf": "^3.32.0",
     "telegraf-keyboard": "^1.1.2"
   },
@@ -39,6 +39,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-promise": "^4.2.1",
+    "jsdoc": "^3.6.3",
     "nodemon": "^1.19.1"
   }
 }
