--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "telegraf-keyboard": "^1.1.2"
   },
   "devDependencies": {
-    "docdash": "^1.1.1",
+    "docdash-elegant": "^1.1.1",
     "eslint": "^6.3.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
