--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -119,7 +119,7 @@
         "key-spacing" : [
             "error",
             {
-                "beforeColon" : true,
+                "beforeColon" : false,
                 "afterColon" : true
             }
         ],
